force-app/main/default/objects/PerformanceMeta__mdt/PerformanceMeta__mdt.object-meta.xml
<CustomObject>
    <label>Performance Metadata</label>
    <pluralLabel>Performance Metadata</pluralLabel>
</CustomObject>