force-app/main/default/objects/PerformanceMeta__mdt/fields/ProjectName__c.field-meta.xml
<CustomField>
    <fullName>ProjectName__c</fullName>
    <label>Project Name</label>
    <type>TextArea</type>
</CustomField>