force-app/main/default/objects/PerformanceMeta__mdt/fields/VersionNumber__c.field-meta.xml
<CustomField>
    <fullName>VersionNumber__c</fullName>
    <label>Version Number</label>
    <type>TextArea</type>
</CustomField>